--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -23,10 +22,11 @@ a:hover {
 }
 
 body {
+  background-color: black;
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  width: 1280px;
   min-height: 100vh;
 }
 
@@ -55,10 +55,6 @@ button:focus-visible {
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
   a:hover {
     color: #747bff;
   }
